[gd_scene load_steps=3 format=3 uid="uid://ysfp07cxxbf0"]

[ext_resource type="Script" path="res://godot_resource_groups_examples/example_background_gdscript/example.gd" id="1_qqhi4"]
[ext_resource type="Resource" uid="uid://c587yhsgnn3lc" path="res://godot_resource_groups_examples/one_thousand_images.tres" id="2_3qqt7"]

[node name="Control" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qqhi4")
one_thousand_images = ExtResource("2_3qqt7")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 4

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Loading a thousand images (GDScript)"
horizontal_alignment = 1

[node name="LoadButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "Load"

[node name="CancelButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 4
text = "Cancel"

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="InfoLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Done!"
horizontal_alignment = 1

[node name="DoneLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Done!"
horizontal_alignment = 1

[connection signal="pressed" from="VBoxContainer/LoadButton" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="VBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
